@@ -34,7 +34,8 @@ class OrderList(models.Model):
     id = BigIntegerAutoField(primary_key=True)
     buyer_name = models.CharField(default="",max_length=32, verbose_name=u'买手')
     order_amount = models.FloatField(default=0, verbose_name=u'金额')
-    supplier_name = models.CharField(default="",blank=True, max_length=128, verbose_name=u'供应商')
+    supplier_name = models.CharField(default="", blank=True, max_length=128, verbose_name=u'商品链接')
+    supplier_shop = models.CharField(default="", blank=True, max_length=32, verbose_name=u'供应商店铺名')
     express_company = models.CharField(default="", blank=True, max_length=32, verbose_name=u'快递公司')
     express_no = models.CharField(default="",blank=True, max_length=32, verbose_name=u'快递单号')
     receiver = models.CharField(default="", max_length=32, verbose_name=u'仓库负责人')
